--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Comfortaa&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
-.app{
-  background: #000000;
+p {
+  font-size: 16px;
+}
+
+.app {
+  background: white;
   z-index: -1;
   position: relative;
+}
+.landing-page-top {
+  background: black;
+  z-index: -1;
+  height: 100vh;
 }
 .headline{
   margin-top: 30.67%;
@@ -30,7 +39,7 @@
 }
 .leftside-home{
   background: #2489A5;
-  height: 100vw;
+  height: 100vh;
 }
 .rightside-home{
   font-family: 'Comfortaa';
@@ -38,7 +47,7 @@
   font-weight: 500;
   position: relative;
   z-index: -1;
-  height: 100vw;
+  height: 100vh;
 }
 .rightside-home-bg{
   background-image: url('/bg-1.jpeg');
@@ -81,6 +90,20 @@
   width: 0.2vw;
   margin-left: 1.2vw;
   z-index: 500;
+}
+
+.featured-workshop {
+  padding: 4em 6em;
+  font-family: 'Montserrat';
+}
+.featured-workshop h1{
+  font-weight: bold;
+  padding-bottom: 7px;
+  border-bottom: solid 5px #FFAB40;
+  width: 3.5em;
+}
+.featured-workshop .type {
+  color: #2489A5;
 }
 
 /* @media only screen and (max-width: 100px) {
