--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Comfortaa&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
-p {
-  font-size: 16px;
-}
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
 
 .app {
   background: white;
-  z-index: -1;
+  z-index: 0;
   position: relative;
 }
 .landing-page-top {
@@ -59,7 +56,7 @@ p {
 .navbar-top{
   position: absolute !important;
   top: 0;
-  margin-left: 10%;
+  padding-left: 15%;
   margin-top: 3%;
   width: 50vw !important;
   color: white;
@@ -92,18 +89,82 @@ p {
   z-index: 500;
 }
 
+.register-section {
+  background-color: black;
+}
+.register-section h1 {
+  color: white;
+}
+.register-section h3 {
+  color: #2489A5;
+  font-weight: 500;
+}
+
 .featured-workshop {
-  padding: 4em 6em;
+  padding: 7em 6em 3em 6em;
   font-family: 'Montserrat';
 }
-.featured-workshop h1{
-  font-weight: bold;
+.featured-workshop h1 {
+  font-weight: 700;
+  font-size: 48px;
   padding-bottom: 7px;
   border-bottom: solid 5px #FFAB40;
   width: 3.5em;
 }
-.featured-workshop .type {
+.featured-workshop a {
   color: #2489A5;
+  font-size: 16px;
+}
+.featured-workshop .seemore {
+  margin: 48px 24px;
+  font-size: 24px;
+  color: black;
+  border-bottom: grey solid 2px;
+}
+.featured-workshop .doit {
+  font-family: Rubik;
+  font-size: 250px;
+  position: absolute;
+  top: -100px;
+  right: 0;
+  color: rgba(120, 226, 255, 0.12);
+  font-weight: 700;
+}
+
+.workshop-card {
+  background: black;
+  width: 540px;
+  height: 300px;
+  display: block;
+  border-radius: 20px;
+  transition: transform .2s;
+}
+.workshop-card:hover {
+  transform: scale(1.03);
+}
+.workshop-card-bg {
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  opacity: 0.4;
+}
+.workshop-card-title {
+  position: absolute;
+  color: white;
+  font-size: 30px;
+  top: 27px;
+  left: 42px;
+  width: 80%;
+}
+.workshop-card-owner {
+  color: white;
+  position: absolute;
+  bottom: 37px;
+  left: 42px;
+  border-top: #2489A5 solid 2px;
+  width: 40%;
+  padding-top: 10px;
+  white-space: nowrap;
 }
 
 /* @media only screen and (max-width: 100px) {
