--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
   position: relative;
 }
 
+p {
+  margin-bottom: 0 !important;
+}
+
 /* @media only screen and (max-width: 100px) {
   .navbar-top{
     display: none;
