--- a/src/components/NavBarWithLogo/index.css
+++ b/src/components/NavBarWithLogo/index.css
@@ -1,6 +1,12 @@
 .navbar-with-logo {
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-    padding-top: 10px;
+    padding: 10px 20px;
+}
+
+.logo-text h5 {
+    font-family: 'Comfortaa', sans-serif;
+    color: #FFAB40;
+    margin-bottom: 0;
 }
 
 .logo-text {
@@ -9,4 +15,5 @@
 
 .navbar-item {
     display: inline-block;
+    padding-top: 12px;
 }
