--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Comfortaa&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap');
 @import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
+
+body {
+  font-family: 'Montserrat', sans-serif !important;
+}
 
 .app {
   background: white;
