--- a/src/components/WsCalendarCard/index.css
+++ b/src/components/WsCalendarCard/index.css
@@ -1,19 +1,23 @@
 .ws-calendar-card {
-    box-shadow: 0px 4px 20px rgba(238, 238, 238, 0.1);
-    width: 200px;
-    height: 250px;
-    padding: 10px;
+    box-shadow: 0px 4px 20px rgba(6, 6, 6, 0.1);
+    width: 180px;
+    height: 240px;
+    padding: 25px 20px;
 }
 
 .ws-day, .ws-month, .ws-time {
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .ws-date {
-    font-size: 72px;
+    font-size: 68px;
     font-weight: 400;
 }
 
 .ws-day, .ws-month {
     font-weight: 500;
+}
+
+.right-col {
+    padding-left: 50px;
 }
