--- a/src/components/WsOwnerInfo/index.css
+++ b/src/components/WsOwnerInfo/index.css
@@ -1,3 +1,22 @@
 .ws-owner-info {
     display: flex;
 }
+
+.ws-owner-img img {
+    height: 100px;
+    width: 100px;
+}
+
+.ws-owner-inner {
+    padding-top: 20px;
+    padding-left: 30px;
+}
+
+.ws-owner-name {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.ws-organized-by-txt {
+    color: #555555;
+}
